# desktop-gadget-clock

./: .gitignore  LICENSE  README.md  efl_api_reference.txt  meson.build
data/: meson.build
data/themes/: default.edc
src/: main.c  meson.build
